# framework.web.wearable.web-provider

./: CMakeLists.txt  livebox.web-provider.efl  livebox.web-provider.manifest  livebox.web-provider.xml  uncrustify.sh  widget.web-provider.efl  widget.web-provider.manifest  widget.web-provider.xml
Po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de_DE.po  el_GR.po  en.po  es_ES.po  et.po  eu.po  fi.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl_NL.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sk.po  sl.po  sr.po  (+7 more)
cmake/: OptionsTizen.cmake
data/: 200.livebox.web-provider.patch.sh  200.widget.web-provider.patch.sh  web_provider_db.sql  web_provider_reset_db.sh
packaging/: livebox.web-provider.spec  widget.web-provider.spec
pkgconfig/: web-provider-svc.pc.in  web-provider.pc.in
src/: CMakeLists.txt
src/API/: CMakeLists.txt  SqliteDB.cpp  SqliteDB.h  WebProviderDB.h  web-provider-info.h  web_provider_livebox_info.cpp  web_provider_livebox_info.h  web_provider_plugin_info.cpp  web_provider_plugin_info.h  web_provider_service.cpp  web_provider_service.h  web_provider_widget_info.cpp  web_provider_widget_info.h
src/Core/: Box.cpp  Box.h  BoxData.h  BoxLoadBalancer.cpp  BoxLoadBalancer.h  BoxManager.cpp  BoxManager.h  BoxState.cpp  BoxState.h  BoxUpdateTimer.cpp  BoxUpdateTimer.h  CMakeLists.txt  IBox.h  IBoxContext.h  IBoxManager.h  IBoxState.h  Platform.h  config.h
src/Core/Buffer/: BoxRenderBuffer.cpp  BoxRenderBuffer.h  CMakeLists.txt  GbarRenderBuffer.cpp  GbarRenderBuffer.h  IRenderBuffer.h  PdRenderBuffer.cpp  PdRenderBuffer.h  RenderBuffer.cpp  RenderBuffer.h
src/Core/Util/: CMakeLists.txt  ITimer.h  Log.cpp  Log.h  Noncopyable.h  Util.h
src/Core/View/: CMakeLists.txt  GbarHelper.cpp  GbarHelper.h  IGbarHelper.h  IJsInterface.h  IPdHelper.h  IRenderView.h  IWebView.h  JsInterface.cpp  JsInterface.h  PdHelper.cpp  PdHelper.h  RenderView.cpp  RenderView.h  WebView.cpp  WebView.h  injection.js
src/Core/View/Service/: AppControl.cpp  AppControl.h  CMakeLists.txt  MessageManager.cpp  MessageManager.h  PeriodChanger.cpp  PeriodChanger.h  ScrollHolder.cpp  ScrollHolder.h
src/Daemon/: BoxDaemon.cpp  BoxDaemon.h  BoxDaemonImpl.cpp  BoxDaemonImpl.h  BoxDaemonUtil.cpp  BoxDaemonUtil.h  CMakeLists.txt  main.cpp
src/Plugin/: BoxPluginConnector.cpp  BoxPluginConnector.h  CMakeLists.txt  IBoxPluginConnector.h  IBoxPluginFactory.h  box_plugin_interface.h
src/Plugin/AppBoxPlugin/: AppBoxGbarHelper.cpp  AppBoxGbarHelper.h  AppBoxManager.cpp  AppBoxManager.h  AppBoxPdHelper.cpp  AppBoxPdHelper.h  AppBoxPluginFactory.cpp  AppBoxPluginFactory.h  AppBoxRenderView.cpp  AppBoxRenderView.h  CMakeLists.txt  app.json  box_plugin_interface.cpp
